	* 1.3.1
	* Fixed issue with hyphens in man page
	* Made window hide more responsive
	* Treating a single hyphen in the EPG subtitle as blank
	* Added Watch Now button to EPG event dialog
	* Status icon now shows SR description rather than channel description for SRs
	* Added CZ scan range (patch from Luboš Staněk)
	* Fixed issues with non-translatable strings in UI file (patch from Luboš Staněk)

2010-07-04  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.3.0
	* UI change to reduce vertical requirement
	* Removed fullscreen bug workaround
	* Switched to a 2 mode interface
	* Added volume control
	* Fix for auto subtitle/audio stream selection
	* Added --devices command line option
	* Added auto record feature
	* Channels/EPG events no longer save if not dirty
	* Display stream is stopped when main window is closed
	* Fix to only select first preferred language stream
	* Added description to EPG tooltips

2010-06-14  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.6
	* Clearing demuxers on channel stream destroy
	* Added signal strength column to scan dialog
	* Added rename option to channel conflict actions
	* Added repeat option for channel conflict
	* Added command line option for no screensaver inhibit
	* Put command line parse in try/catch so command line errors get reported
	* Auto audio/subtitle selection does not delay any more
	* Selected better default for epg_page_size

2010-06-12  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.5
	* Fixed EPG event dialog not updating due to unencoded XML
	* Fixed crash bug on right-click channel record
	* Added LT scan range
	* Volume icon is now context sensitive
	* Now stopping/starting frontend thread when modifying streams
	* FrontendThread now polls for data

2010-05-15  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.4
	* Right-click on EPG events toggles record
	* Right-click on rows in the EPG event search dialag toggles record
	* Shutdown after record implemented
